[gd_scene load_steps=14 format=2]

[ext_resource path="res://Tiles/Terrain.tres" type="TileSet" id=1]
[ext_resource path="res://Scenes/Transporter.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Control.gd" type="Script" id=3]
[ext_resource path="res://Scenes/Terrain.gd" type="Script" id=4]
[ext_resource path="res://Tiles/Selected.png" type="Texture" id=5]
[ext_resource path="res://Font/UiTheme.tres" type="Theme" id=6]
[ext_resource path="res://Scenes/Units.gd" type="Script" id=7]
[ext_resource path="res://Scenes/Interface.gd" type="Script" id=8]
[ext_resource path="res://Units/projectiles/Missilepng.png" type="Texture" id=9]
[ext_resource path="res://DebugSquare.png" type="Texture" id=10]
[ext_resource path="res://Explosion/Explosion.tscn" type="PackedScene" id=11]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array(  )
}

[sub_resource type="GDScript" id=2]

[node name="HexMap" type="Node2D"]

[node name="Terrain" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
cell_size = Vector2( 32, 96 )
cell_half_offset = 1
cell_tile_origin = 1
centered_textures = true
format = 1
tile_data = PoolIntArray( -4, 0, 0, -3, 0, 0, -2, 0, 0, -1, 0, 0, -65536, 0, 0, -65535, 0, 0, -65534, 0, 0, -65533, 0, 0, -65532, 0, 0, -65531, 0, 0, -65530, 0, 0, -65529, 0, 0, -65528, 0, 0, -65527, 0, 0, -65526, 0, 0, -65525, 0, 0, -65524, 0, 0, -65523, 0, 0, -65522, 0, 0, -65521, 0, 0, -65520, 0, 0, -65519, 0, 0, -65518, 0, 0, -65517, 0, 0, -65516, 0, 0, -65515, 0, 0, -65514, 0, 0, -65513, 0, 0, -65512, 0, 0, -65511, 0, 0, -65510, 0, 0, -65509, 0, 0, -65508, 2, 0, -65507, 2, 0, -65506, 1, 0, -65505, 1, 0, -65504, 1, 0, -65503, 1, 0, -65502, 0, 0, -65501, 0, 0, -65500, 0, 0, -65499, 0, 0, -65498, 0, 0, -65497, 0, 0, -65496, 0, 0, -65495, 0, 0, -65494, 0, 0, -65493, 0, 0, -65492, 0, 0, -65491, 0, 0, -65490, 0, 0, -65489, 0, 0, -65488, 0, 0, -65487, 0, 0, -65486, 0, 0, -65485, 0, 0, -65484, 0, 0, -65483, 0, 0, -65482, 0, 0, -65481, 0, 0, -65480, 0, 0, -65479, 0, 0, -65478, 0, 0, -65477, 0, 0, -65476, 0, 0, -65475, 0, 0, -65474, 0, 0, -65473, 0, 0, -65472, 0, 0, 65532, 0, 0, 65533, 0, 0, 65534, 0, 0, 65535, 0, 0, 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 14, 0, 0, 15, 0, 0, 16, 0, 0, 17, 0, 0, 18, 0, 0, 19, 0, 0, 20, 0, 0, 21, 0, 0, 22, 0, 0, 23, 0, 0, 24, 0, 0, 25, 0, 0, 26, 0, 0, 27, 0, 0, 28, 0, 0, 29, 0, 0, 30, 0, 0, 31, 2, 0, 32, 1, 0, 33, 2, 0, 34, 1, 0, 35, 2, 0, 36, 0, 0, 37, 2, 0, 38, 0, 0, 39, 0, 0, 40, 0, 0, 41, 0, 0, 42, 0, 0, 43, 0, 0, 44, 0, 0, 45, 0, 0, 46, 0, 0, 47, 0, 0, 48, 0, 0, 49, 0, 0, 50, 0, 0, 51, 0, 0, 52, 0, 0, 53, 0, 0, 54, 0, 0, 55, 0, 0, 56, 0, 0, 57, 0, 0, 58, 0, 0, 59, 0, 0, 60, 0, 0, 61, 0, 0, 62, 0, 0, 63, 0, 0, 64, 0, 0, 65, 0, 0, 131068, 0, 0, 131069, 0, 0, 131070, 0, 0, 131071, 0, 0, 65536, 0, 0, 65537, 0, 0, 65538, 0, 0, 65539, 0, 0, 65540, 0, 0, 65541, 0, 0, 65542, 0, 0, 65543, 0, 0, 65544, 0, 0, 65545, 0, 0, 65546, 0, 0, 65547, 0, 0, 65548, 0, 0, 65549, 0, 0, 65550, 0, 0, 65551, 0, 0, 65552, 0, 0, 65553, 0, 0, 65554, 0, 0, 65555, 0, 0, 65556, 0, 0, 65557, 0, 0, 65558, 0, 0, 65559, 0, 0, 65560, 0, 0, 65561, 0, 0, 65562, 0, 0, 65563, 0, 0, 65564, 0, 0, 65565, 0, 0, 65566, 0, 0, 65567, 0, 0, 65568, 2, 0, 65569, 2, 0, 65570, 2, 0, 65571, 1, 0, 65572, 2, 0, 65573, 1, 0, 65574, 2, 0, 65575, 0, 0, 65576, 0, 0, 65577, 0, 0, 65578, 0, 0, 65579, 0, 0, 65580, 0, 0, 65581, 0, 0, 65582, 0, 0, 65583, 0, 0, 65584, 0, 0, 65585, 0, 0, 65586, 0, 0, 65587, 0, 0, 65588, 0, 0, 65589, 0, 0, 65590, 0, 0, 65591, 0, 0, 65592, 0, 0, 65593, 0, 0, 65594, 0, 0, 65595, 0, 0, 65596, 0, 0, 65597, 0, 0, 65598, 0, 0, 65599, 0, 0, 65600, 0, 0, 65601, 0, 0, 196604, 0, 0, 196605, 0, 0, 196606, 0, 0, 196607, 0, 0, 131072, 0, 0, 131073, 0, 0, 131074, 0, 0, 131075, 0, 0, 131076, 0, 0, 131077, 0, 0, 131078, 0, 0, 131079, 0, 0, 131080, 0, 0, 131081, 0, 0, 131082, 0, 0, 131083, 0, 0, 131084, 0, 0, 131085, 0, 0, 131086, 0, 0, 131087, 0, 0, 131088, 0, 0, 131089, 0, 0, 131090, 0, 0, 131091, 0, 0, 131092, 0, 0, 131093, 0, 0, 131094, 0, 0, 131095, 0, 0, 131096, 0, 0, 131097, 0, 0, 131098, 0, 0, 131099, 0, 0, 131100, 0, 0, 131101, 0, 0, 131102, 0, 0, 131103, 0, 0, 131104, 0, 0, 131105, 0, 0, 131106, 0, 0, 131107, 1, 0, 131108, 1, 0, 131109, 1, 0, 131110, 0, 0, 131111, 0, 0, 131112, 0, 0, 131113, 0, 0, 131114, 0, 0, 131115, 0, 0, 131116, 0, 0, 131117, 0, 0, 131118, 0, 0, 131119, 0, 0, 131120, 0, 0, 131121, 0, 0, 131122, 0, 0, 131123, 0, 0, 131124, 0, 0, 131125, 0, 0, 131126, 0, 0, 131127, 0, 0, 131128, 0, 0, 131129, 0, 0, 131130, 0, 0, 131131, 0, 0, 131132, 0, 0, 131133, 0, 0, 131134, 0, 0, 131135, 0, 0, 131136, 0, 0, 131137, 0, 0, 262140, 0, 0, 262141, 0, 0, 262142, 0, 0, 262143, 0, 0, 196608, 0, 0, 196609, 0, 0, 196610, 0, 0, 196611, 0, 0, 196612, 0, 0, 196613, 0, 0, 196614, 0, 0, 196615, 0, 0, 196616, 0, 0, 196617, 0, 0, 196618, 0, 0, 196619, 0, 0, 196620, 0, 0, 196621, 0, 0, 196622, 0, 0, 196623, 0, 0, 196624, 0, 0, 196625, 0, 0, 196626, 0, 0, 196627, 0, 0, 196628, 0, 0, 196629, 0, 0, 196630, 0, 0, 196631, 0, 0, 196632, 0, 0, 196633, 0, 0, 196634, 0, 0, 196635, 0, 0, 196636, 0, 0, 196637, 0, 0, 196638, 0, 0, 196639, 0, 0, 196640, 0, 0, 196641, 0, 0, 196642, 1, 0, 196643, 1, 0, 196644, 2, 0, 196645, 2, 0, 196646, 1, 0, 196647, 1, 0, 196648, 0, 0, 196649, 0, 0, 196650, 0, 0, 196651, 0, 0, 196652, 0, 0, 196653, 0, 0, 196654, 0, 0, 196655, 0, 0, 196656, 0, 0, 196657, 0, 0, 196658, 0, 0, 196659, 0, 0, 196660, 0, 0, 196661, 0, 0, 196662, 0, 0, 196663, 0, 0, 196664, 0, 0, 196665, 0, 0, 196666, 0, 0, 196667, 0, 0, 196668, 0, 0, 196669, 0, 0, 196670, 0, 0, 196671, 0, 0, 196672, 0, 0, 196673, 0, 0, 327676, 0, 0, 327677, 0, 0, 327678, 0, 0, 327679, 0, 0, 262144, 0, 0, 262145, 0, 0, 262146, 0, 0, 262147, 0, 0, 262148, 0, 0, 262149, 0, 0, 262150, 0, 0, 262151, 0, 0, 262152, 0, 0, 262153, 0, 0, 262154, 0, 0, 262155, 0, 0, 262156, 0, 0, 262157, 0, 0, 262158, 0, 0, 262159, 0, 0, 262160, 0, 0, 262161, 0, 0, 262162, 0, 0, 262163, 0, 0, 262164, 0, 0, 262165, 0, 0, 262166, 0, 0, 262167, 0, 0, 262168, 0, 0, 262169, 0, 0, 262170, 0, 0, 262171, 0, 0, 262172, 0, 0, 262173, 0, 0, 262174, 0, 0, 262175, 0, 0, 262176, 0, 0, 262177, 0, 0, 262178, 1, 0, 262179, 1, 0, 262180, 2, 0, 262181, 1, 0, 262182, 2, 0, 262183, 1, 0, 262184, 1, 0, 262185, 0, 0, 262186, 0, 0, 262187, 0, 0, 262188, 0, 0, 262189, 0, 0, 262190, 0, 0, 262191, 0, 0, 262192, 0, 0, 262193, 0, 0, 262194, 0, 0, 262195, 0, 0, 262196, 0, 0, 262197, 0, 0, 262198, 0, 0, 262199, 0, 0, 262200, 0, 0, 262201, 0, 0, 262202, 0, 0, 262203, 0, 0, 262204, 0, 0, 262205, 0, 0, 262206, 0, 0, 262207, 0, 0, 262208, 0, 0, 262209, 0, 0, 393212, 0, 0, 393213, 0, 0, 393214, 0, 0, 393215, 0, 0, 327680, 0, 0, 327681, 0, 0, 327682, 0, 0, 327683, 0, 0, 327684, 0, 0, 327685, 0, 0, 327686, 0, 0, 327687, 0, 0, 327688, 0, 0, 327689, 0, 0, 327690, 0, 0, 327691, 0, 0, 327692, 0, 0, 327693, 0, 0, 327694, 0, 0, 327695, 0, 0, 327696, 0, 0, 327697, 0, 0, 327698, 0, 0, 327699, 0, 0, 327700, 0, 0, 327701, 0, 0, 327702, 0, 0, 327703, 0, 0, 327704, 0, 0, 327705, 0, 0, 327706, 0, 0, 327707, 0, 0, 327708, 0, 0, 327709, 0, 0, 327710, 0, 0, 327711, 0, 0, 327712, 0, 0, 327713, 1, 0, 327714, 1, 0, 327715, 1, 0, 327716, 1, 0, 327717, 0, 0, 327718, 1, 0, 327719, 2, 0, 327720, 1, 0, 327721, 2, 0, 327722, 0, 0, 327723, 0, 0, 327724, 0, 0, 327725, 0, 0, 327726, 0, 0, 327727, 0, 0, 327728, 0, 0, 327729, 0, 0, 327730, 0, 0, 327731, 0, 0, 327732, 0, 0, 327733, 0, 0, 327734, 0, 0, 327735, 0, 0, 327736, 0, 0, 327737, 0, 0, 327738, 0, 0, 327739, 0, 0, 327740, 0, 0, 327741, 0, 0, 327742, 0, 0, 327743, 0, 0, 327744, 0, 0, 327745, 0, 0, 458748, 0, 0, 458749, 0, 0, 458750, 0, 0, 458751, 0, 0, 393216, 0, 0, 393217, 0, 0, 393218, 0, 0, 393219, 0, 0, 393220, 0, 0, 393221, 0, 0, 393222, 0, 0, 393223, 0, 0, 393224, 0, 0, 393225, 0, 0, 393226, 0, 0, 393227, 0, 0, 393228, 0, 0, 393229, 0, 0, 393230, 0, 0, 393231, 0, 0, 393232, 0, 0, 393233, 0, 0, 393234, 0, 0, 393235, 0, 0, 393236, 0, 0, 393237, 0, 0, 393238, 0, 0, 393239, 0, 0, 393240, 0, 0, 393241, 0, 0, 393242, 0, 0, 393243, 0, 0, 393244, 0, 0, 393245, 0, 0, 393246, 0, 0, 393247, 1, 0, 393248, 1, 0, 393249, 1, 0, 393250, 1, 0, 393251, 0, 0, 393252, 0, 0, 393253, 0, 0, 393254, 0, 0, 393255, 2, 0, 393256, 2, 0, 393257, 1, 0, 393258, 2, 0, 393259, 0, 0, 393260, 0, 0, 393261, 0, 0, 393262, 0, 0, 393263, 0, 0, 393264, 0, 0, 393265, 0, 0, 393266, 0, 0, 393267, 0, 0, 393268, 0, 0, 393269, 0, 0, 393270, 0, 0, 393271, 0, 0, 393272, 0, 0, 393273, 0, 0, 393274, 0, 0, 393275, 0, 0, 393276, 0, 0, 393277, 0, 0, 393278, 0, 0, 393279, 0, 0, 393280, 0, 0, 393281, 0, 0, 524284, 0, 0, 524285, 0, 0, 524286, 0, 0, 524287, 0, 0, 458752, 0, 0, 458753, 0, 0, 458754, 0, 0, 458755, 0, 0, 458756, 0, 0, 458757, 0, 0, 458758, 0, 0, 458759, 0, 0, 458760, 0, 0, 458761, 0, 0, 458762, 0, 0, 458763, 0, 0, 458764, 0, 0, 458765, 0, 0, 458766, 0, 0, 458767, 0, 0, 458768, 0, 0, 458769, 0, 0, 458770, 0, 0, 458771, 0, 0, 458772, 0, 0, 458773, 0, 0, 458774, 0, 0, 458775, 0, 0, 458776, 0, 0, 458777, 0, 0, 458778, 0, 0, 458779, 0, 0, 458780, 0, 0, 458781, 1, 0, 458782, 1, 0, 458783, 1, 0, 458784, 1, 0, 458785, 0, 0, 458786, 0, 0, 458787, 0, 0, 458788, 0, 0, 458789, 0, 0, 458790, 0, 0, 458791, 0, 0, 458792, 1, 0, 458793, 1, 0, 458794, 1, 0, 458795, 1, 0, 458796, 0, 0, 458797, 0, 0, 458798, 0, 0, 458799, 0, 0, 458800, 0, 0, 458801, 0, 0, 458802, 0, 0, 458803, 0, 0, 458804, 0, 0, 458805, 0, 0, 458806, 0, 0, 458807, 0, 0, 458808, 0, 0, 458809, 0, 0, 458810, 0, 0, 458811, 0, 0, 458812, 0, 0, 458813, 0, 0, 458814, 0, 0, 458815, 0, 0, 458816, 0, 0, 458817, 0, 0, 589820, 0, 0, 589821, 0, 0, 589822, 0, 0, 589823, 0, 0, 524288, 0, 0, 524289, 0, 0, 524290, 0, 0, 524291, 0, 0, 524292, 0, 0, 524293, 0, 0, 524294, 0, 0, 524295, 0, 0, 524296, 0, 0, 524297, 0, 0, 524298, 0, 0, 524299, 0, 0, 524300, 0, 0, 524301, 0, 0, 524302, 0, 0, 524303, 0, 0, 524304, 0, 0, 524305, 0, 0, 524306, 0, 0, 524307, 0, 0, 524308, 0, 0, 524309, 0, 0, 524310, 0, 0, 524311, 0, 0, 524312, 0, 0, 524313, 0, 0, 524314, 0, 0, 524315, 0, 0, 524316, 2, 0, 524317, 2, 0, 524318, 2, 0, 524319, 2, 0, 524320, 2, 0, 524321, 2, 0, 524322, 0, 0, 524323, 0, 0, 524324, 0, 0, 524325, 0, 0, 524326, 0, 0, 524327, 0, 0, 524328, 0, 0, 524329, 0, 0, 524330, 1, 0, 524331, 1, 0, 524332, 1, 0, 524333, 1, 0, 524334, 0, 0, 524335, 0, 0, 524336, 0, 0, 524337, 0, 0, 524338, 0, 0, 524339, 0, 0, 524340, 0, 0, 524341, 0, 0, 524342, 0, 0, 524343, 0, 0, 524344, 0, 0, 524345, 0, 0, 524346, 0, 0, 524347, 0, 0, 524348, 0, 0, 524349, 0, 0, 524350, 0, 0, 524351, 0, 0, 524352, 0, 0, 524353, 0, 0, 655356, 0, 0, 655357, 0, 0, 655358, 0, 0, 655359, 0, 0, 589824, 0, 0, 589825, 0, 0, 589826, 0, 0, 589827, 0, 0, 589828, 0, 0, 589829, 0, 0, 589830, 0, 0, 589831, 0, 0, 589832, 0, 0, 589833, 0, 0, 589834, 0, 0, 589835, 0, 0, 589836, 0, 0, 589837, 0, 0, 589838, 0, 0, 589839, 0, 0, 589840, 0, 0, 589841, 0, 0, 589842, 0, 0, 589843, 0, 0, 589844, 0, 0, 589845, 0, 0, 589846, 0, 0, 589847, 0, 0, 589848, 0, 0, 589849, 0, 0, 589850, 0, 0, 589851, 0, 0, 589852, 0, 0, 589853, 1, 0, 589854, 1, 0, 589855, 1, 0, 589856, 1, 0, 589857, 0, 0, 589858, 0, 0, 589859, 0, 0, 589860, 0, 0, 589861, 0, 0, 589862, 0, 0, 589863, 0, 0, 589864, 0, 0, 589865, 0, 0, 589866, 0, 0, 589867, 2, 0, 589868, 1, 0, 589869, 1, 0, 589870, 1, 0, 589871, 1, 0, 589872, 0, 0, 589873, 0, 0, 589874, 0, 0, 589875, 0, 0, 589876, 0, 0, 589877, 0, 0, 589878, 0, 0, 589879, 0, 0, 589880, 0, 0, 589881, 0, 0, 589882, 0, 0, 589883, 0, 0, 589884, 0, 0, 589885, 0, 0, 589886, 0, 0, 589887, 0, 0, 589888, 0, 0, 589889, 0, 0 )
script = ExtResource( 4 )

[node name="DebugSquare" type="Sprite" parent="Terrain"]
visible = false
texture = ExtResource( 10 )
centered = false

[node name="Units" type="Node" parent="."]
script = ExtResource( 7 )

[node name="Interface" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Missile" type="Sprite" parent="Interface"]
visible = false
position = Vector2( -3.8147e-05, 1.52588e-05 )
texture = ExtResource( 9 )

[node name="CellCursor" type="Sprite" parent="Interface"]
position = Vector2( 16, 48 )
texture = ExtResource( 5 )

[node name="PlannedPath" type="Line2D" parent="Interface"]
default_color = Color( 0.980392, 1, 0.4, 0.592157 )

[node name="MovementPath" type="Path2D" parent="Interface"]
curve = SubResource( 1 )

[node name="PathFollow2D" type="PathFollow2D" parent="Interface/MovementPath"]

[node name="Transporter" type="Node2D" parent="Interface/MovementPath/PathFollow2D"]
script = ExtResource( 2 )

[node name="Explosion" parent="Interface" instance=ExtResource( 11 )]
z_index = 3

[node name="Camera" type="Camera2D" parent="Interface"]
position = Vector2( 350.531, 451.755 )
current = true
editor_draw_limits = true

[node name="L" type="CanvasLayer" parent="Interface/Camera"]

[node name="SidebarBackground" type="Panel" parent="Interface/Camera/L"]
anchor_left = 0.8
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sidebar" type="VBoxContainer" parent="Interface/Camera/L"]
self_modulate = Color( 1, 0, 0, 1 )
anchor_left = 0.805
anchor_top = 0.005
anchor_right = 0.967
anchor_bottom = 0.995
margin_left = -0.320007
margin_right = 41.12
margin_bottom = 106.0
mouse_filter = 0
theme = ExtResource( 6 )
custom_constants/separation = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Turn" type="PanelContainer" parent="Interface/Camera/L/Sidebar"]
margin_right = 216.0
margin_bottom = 30.0

[node name="TurnInformation" type="Label" parent="Interface/Camera/L/Sidebar/Turn"]
margin_left = 3.0
margin_top = 5.0
margin_right = 213.0
margin_bottom = 25.0
text = "Turn x, player A"

[node name="Descriptions" type="PanelContainer" parent="Interface/Camera/L/Sidebar"]
margin_top = 34.0
margin_right = 216.0
margin_bottom = 136.0

[node name="VB" type="VBoxContainer" parent="Interface/Camera/L/Sidebar/Descriptions"]
margin_left = 3.0
margin_top = 5.0
margin_right = 213.0
margin_bottom = 97.0

[node name="CellDescription" type="Label" parent="Interface/Camera/L/Sidebar/Descriptions/VB"]
margin_right = 210.0
margin_bottom = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UnitDescription" type="Label" parent="Interface/Camera/L/Sidebar/Descriptions/VB"]
margin_top = 24.0
margin_right = 210.0
margin_bottom = 44.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TargetDescription" type="Label" parent="Interface/Camera/L/Sidebar/Descriptions/VB"]
margin_top = 48.0
margin_right = 210.0
margin_bottom = 68.0
text = "Tank, 22 hex, 35% hit"

[node name="ActionResults" type="Label" parent="Interface/Camera/L/Sidebar/Descriptions/VB"]
margin_top = 72.0
margin_right = 210.0
margin_bottom = 92.0

[node name="Stance" type="PanelContainer" parent="Interface/Camera/L/Sidebar"]
margin_top = 140.0
margin_right = 216.0
margin_bottom = 206.0

[node name="VB" type="VBoxContainer" parent="Interface/Camera/L/Sidebar/Stance"]
margin_left = 3.0
margin_top = 5.0
margin_right = 213.0
margin_bottom = 61.0

[node name="FireStance" type="OptionButton" parent="Interface/Camera/L/Sidebar/Stance/VB" groups=[
"input_to_block",
]]
margin_right = 210.0
margin_bottom = 26.0
text = "Fire at will"
items = [ "Fire at will", null, false, 0, null, "Return fire", null, false, 1, null, "Hold fire", null, false, 2, null ]
selected = 0

[node name="MoveStance" type="OptionButton" parent="Interface/Camera/L/Sidebar/Stance/VB" groups=[
"input_to_block",
]]
margin_top = 30.0
margin_right = 210.0
margin_bottom = 56.0
text = "Slow"
items = [ "Slow", null, false, 0, null, "Pedal to the metal", null, false, 1, null ]
selected = 0

[node name="UnitList" type="PanelContainer" parent="Interface/Camera/L/Sidebar"]
margin_top = 210.0
margin_right = 216.0
margin_bottom = 500.0

[node name="VB" type="VBoxContainer" parent="Interface/Camera/L/Sidebar/UnitList"]
margin_left = 3.0
margin_top = 5.0
margin_right = 213.0
margin_bottom = 285.0

[node name="SC" type="ScrollContainer" parent="Interface/Camera/L/Sidebar/UnitList/VB"]
margin_right = 210.0
margin_bottom = 250.0
rect_min_size = Vector2( 0, 250 )
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VB" type="VBoxContainer" parent="Interface/Camera/L/Sidebar/UnitList/VB/SC"]
margin_bottom = 20.0

[node name="Label" type="Label" parent="Interface/Camera/L/Sidebar/UnitList/VB/SC/VB"]
margin_bottom = 20.0
mouse_filter = 0
script = SubResource( 2 )

[node name="CC" type="CenterContainer" parent="Interface/Camera/L/Sidebar/UnitList/VB"]
margin_top = 254.0
margin_right = 210.0
margin_bottom = 280.0

[node name="HB" type="HBoxContainer" parent="Interface/Camera/L/Sidebar/UnitList/VB/CC"]
margin_left = 21.0
margin_right = 189.0
margin_bottom = 26.0

[node name="Unselect" type="Button" parent="Interface/Camera/L/Sidebar/UnitList/VB/CC/HB" groups=[
"input_to_block",
]]
margin_right = 92.0
margin_bottom = 26.0
text = "Deselect"

[node name="Center" type="Button" parent="Interface/Camera/L/Sidebar/UnitList/VB/CC/HB" groups=[
"input_to_block",
]]
margin_left = 96.0
margin_right = 168.0
margin_bottom = 26.0
text = "Center"

[node name="Artillery" type="Button" parent="Interface/Camera/L/Sidebar" groups=[
"input_to_block",
]]
margin_top = 504.0
margin_right = 216.0
margin_bottom = 530.0
hint_tooltip = "Call fire support - A "
shortcut_in_tooltip = false
text = "Artillery"

[node name="TurnButton" type="Button" parent="Interface/Camera/L/Sidebar" groups=[
"input_to_block",
]]
margin_top = 534.0
margin_right = 216.0
margin_bottom = 560.0
hint_tooltip = "End of turn - Shift + Enter"
text = "End Turn"

[node name="View" type="PanelContainer" parent="Interface/Camera/L/Sidebar"]
margin_top = 564.0
margin_right = 216.0
margin_bottom = 660.0

[node name="CC" type="CenterContainer" parent="Interface/Camera/L/Sidebar/View"]
margin_left = 3.0
margin_top = 5.0
margin_right = 213.0
margin_bottom = 91.0

[node name="GC" type="GridContainer" parent="Interface/Camera/L/Sidebar/View/CC"]
margin_left = 5.0
margin_right = 204.0
margin_bottom = 86.0
columns = 2

[node name="ZoomIn" type="Button" parent="Interface/Camera/L/Sidebar/View/CC/GC" groups=[
"input_to_block",
]]
margin_right = 93.0
margin_bottom = 26.0
hint_tooltip = "Numpad + / Mouse Wheel Up"
text = "Zoom In"

[node name="ZoomOut" type="Button" parent="Interface/Camera/L/Sidebar/View/CC/GC" groups=[
"input_to_block",
]]
margin_left = 97.0
margin_right = 199.0
margin_bottom = 26.0
hint_tooltip = "Numpad - / Mouse Wheel Down"
text = "Zoom Out"

[node name="PanUp" type="Button" parent="Interface/Camera/L/Sidebar/View/CC/GC" groups=[
"input_to_block",
]]
margin_top = 30.0
margin_right = 93.0
margin_bottom = 56.0
hint_tooltip = "Pan Up - W - Up arrow"
text = "Pan Up"

[node name="PanDown" type="Button" parent="Interface/Camera/L/Sidebar/View/CC/GC" groups=[
"input_to_block",
]]
margin_left = 97.0
margin_top = 30.0
margin_right = 199.0
margin_bottom = 56.0
hint_tooltip = "Pan Down - S - Down arrow"
text = "Pan Down"

[node name="PanL" type="Button" parent="Interface/Camera/L/Sidebar/View/CC/GC" groups=[
"input_to_block",
]]
margin_top = 60.0
margin_right = 93.0
margin_bottom = 86.0
hint_tooltip = "Pan Left - A - Left arrow"
text = "Pan Left"

[node name="PanR" type="Button" parent="Interface/Camera/L/Sidebar/View/CC/GC" groups=[
"input_to_block",
]]
margin_left = 97.0
margin_top = 60.0
margin_right = 199.0
margin_bottom = 86.0
hint_tooltip = "Pan Right - D - Right arrow"
text = "Pan Right"

[node name="Admin" type="PanelContainer" parent="Interface/Camera/L/Sidebar"]
margin_top = 664.0
margin_right = 216.0
margin_bottom = 700.0

[node name="HC2" type="HBoxContainer" parent="Interface/Camera/L/Sidebar/Admin"]
margin_left = 3.0
margin_top = 5.0
margin_right = 213.0
margin_bottom = 31.0
alignment = 2

[node name="Quit" type="Button" parent="Interface/Camera/L/Sidebar/Admin/HC2"]
margin_left = 158.0
margin_right = 210.0
margin_bottom = 26.0
hint_tooltip = "Esc"
text = "Quit"

[node name="VictoryBox" type="PanelContainer" parent="Interface/Camera/L"]
visible = false
anchor_left = 0.3
anchor_top = 0.5
anchor_right = 0.3
anchor_bottom = 0.5
margin_right = 318.0
margin_bottom = 127.0
theme = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CC" type="CenterContainer" parent="Interface/Camera/L/VictoryBox"]
margin_left = 3.0
margin_top = 5.0
margin_right = 315.0
margin_bottom = 122.0

[node name="VC" type="VBoxContainer" parent="Interface/Camera/L/VictoryBox/CC"]
margin_left = 10.0
margin_top = 33.0
margin_right = 301.0
margin_bottom = 83.0

[node name="Winner" type="Label" parent="Interface/Camera/L/VictoryBox/CC/VC"]
margin_right = 291.0
margin_bottom = 20.0
text = "Battle finished: ??? victory."

[node name="Quit" type="Button" parent="Interface/Camera/L/VictoryBox/CC/VC"]
margin_top = 24.0
margin_right = 291.0
margin_bottom = 50.0
hint_tooltip = "Esc"
text = "Quit"

[node name="ArtilleryBox" type="PanelContainer" parent="Interface/Camera/L"]
visible = false
anchor_left = 0.3
anchor_top = 0.1
anchor_right = 0.3
anchor_bottom = 0.1
theme = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VB" type="VBoxContainer" parent="Interface/Camera/L/ArtilleryBox"]
margin_left = 3.0
margin_top = 5.0
margin_right = 467.0
margin_bottom = 335.0

[node name="SC" type="ScrollContainer" parent="Interface/Camera/L/ArtilleryBox/VB"]
margin_right = 464.0
margin_bottom = 300.0
rect_min_size = Vector2( 0, 300 )
scroll_horizontal_enabled = false

[node name="ArtilleryList" type="VBoxContainer" parent="Interface/Camera/L/ArtilleryBox/VB/SC"]
margin_right = 400.0
rect_min_size = Vector2( 400, 0 )

[node name="Done" type="Button" parent="Interface/Camera/L/ArtilleryBox/VB"]
margin_top = 304.0
margin_right = 464.0
margin_bottom = 330.0
text = "Done"

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="item_selected" from="Interface/Camera/L/Sidebar/Stance/VB/FireStance" to="Control" method="change_fire_stance"]
[connection signal="item_selected" from="Interface/Camera/L/Sidebar/Stance/VB/MoveStance" to="Control" method="change_move_stance"]
[connection signal="pressed" from="Interface/Camera/L/Sidebar/UnitList/VB/CC/HB/Unselect" to="Control" method="unselect_current_unit"]
[connection signal="pressed" from="Interface/Camera/L/Sidebar/UnitList/VB/CC/HB/Center" to="Control" method="center_on_unit"]
[connection signal="pressed" from="Interface/Camera/L/Sidebar/Artillery" to="Control" method="plot_artillery"]
[connection signal="pressed" from="Interface/Camera/L/Sidebar/TurnButton" to="Control" method="next_turn"]
[connection signal="pressed" from="Interface/Camera/L/Sidebar/View/CC/GC/ZoomIn" to="Interface" method="zoom_in"]
[connection signal="pressed" from="Interface/Camera/L/Sidebar/View/CC/GC/ZoomOut" to="Interface" method="zoom_out"]
[connection signal="pressed" from="Interface/Camera/L/Sidebar/View/CC/GC/PanUp" to="Interface" method="pan_up"]
[connection signal="pressed" from="Interface/Camera/L/Sidebar/View/CC/GC/PanDown" to="Interface" method="pan_down"]
[connection signal="pressed" from="Interface/Camera/L/Sidebar/View/CC/GC/PanL" to="Interface" method="pan_left"]
[connection signal="pressed" from="Interface/Camera/L/Sidebar/View/CC/GC/PanR" to="Interface" method="pan_right"]
[connection signal="pressed" from="Interface/Camera/L/Sidebar/Admin/HC2/Quit" to="Control" method="shutdown"]
[connection signal="pressed" from="Interface/Camera/L/VictoryBox/CC/VC/Quit" to="Control" method="shutdown"]
[connection signal="pressed" from="Interface/Camera/L/ArtilleryBox/VB/Done" to="Control" method="artillery_plot_done"]
